# RRA-Module

./: .dockerignore  .env.example  .flake8  .gitignore  .market.yaml  AUDIT-COMPARISON-SUMMARY.md  AUTHORS.md  BLOCKCHAIN-LICENSING.md  Buyer-Beware.md  CHANGELOG.md  CONTRIBUTING.md  CRYPTO-FINDINGS-QUICK-REFERENCE.md  CRYPTOGRAPHIC-SECURITY-AUDIT-2025-12-20.md  Dockerfile  FAQ.md  FUTURE.md  Founding-Contributor-Pledge.md  INTEGRATION.md  LICENSE.md  LICENSING.md  Makefile  NCIP-016-DRAFT.md  NatLangChain-roadmap.md  PENTEST-REPORT-2025-12-20.md  QUICKSTART.md  README.md  ROADMAP.md  Risk-mitigation.md  SECURITY-AUDIT-REPORT.md  SECURITY-REPORTS.md  SECURITY.md  SECURITY_REPORT.md  SPECIFICATION.md  SUPPORT.md  build.bat  buy-license.html  defi-stack.md  docker-compose.prod.yml  docker-compose.yml  ip-metadata.json  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  contracts.yml  docs.yml  license-verification.yml  marketplace.yml  release.yml  rra-ingest.yml  scripts.yml
circuits/: README.md  dispute_membership.circom  hardware_identity.circom  multi_party_membership.circom  prove_identity.circom  semaphore_membership.circom  viewing_key_proof.circom
config/environments/: .env.development  .env.production  .env.staging
contracts/: README.md  foundry.toml
contracts/abi/: RepoLicense.json
contracts/script/: DeployLicenseEntropyOracle.s.sol  DeployRepoLicense.s.sol  DeployZKInfrastructure.s.sol
contracts/src/: BatchQueue.sol  ComplianceEscrow.sol  DIDRegistry.sol  EventOracle.sol  HardwareIdentityGroup.sol  ILRM.sol  ILRMv2.sol  JurisdictionRouter.sol  L3DisputeRollup.sol  LicenseEntropyOracle.sol  MultiPartyILRM.sol  NegotiationPressure.sol  P256Verifier.sol  RWALicense.sol  RepoLicense.sol  ReputationWeightedVoting.sol  ScopedDelegation.sol  TreasuryCoordinator.sol  WebAuthnVerifier.sol
contracts/test/: ILRM.t.sol
docs/: BLOCKCHAIN-LICENSING.md  CORRECTNESS-AUDIT-2026-01.md  DEFI-INTEGRATION.md  Dispute-Membership-Circuit.md  HARDWARE-AUTHENTICATION.md  INTEGRATION.md  INTEGRATIONS.md  Licensing-Reconciliation-Module-update.md  MOBILE_SDK.md  MONITORING.md  NATLANGCHAIN_INTEGRATION.md  README.md  SECURITY-AUDIT.md  SECURITY-PENTEST-REPORT.md  SECURITY-REMEDIATION-GUIDE.md  SELLING-LICENSES.md  STORY-PROTOCOL-INTEGRATION.md  TESTING-RESULTS.md  TRANSACTION-SECURITY.md  USAGE-GUIDE.md
examples/: README.md  blockchain_licensing_demo.py  default.market.yaml  example_market.yaml  simple_negotiation.py  story_protocol_example.py
examples/github-actions/: README.md  release-license.yml  royalty-claim.yml  royalty-report.yml
examples/workflows/: README.md  complete-license-workflow.js  derivative-tracking-workflow.js  royalty-management-workflow.js
marketplace/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
marketplace/public/: buy-license.html
marketplace/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
marketplace/src/components/: AgentCard.tsx  ChainStatus.tsx  Footer.tsx  Header.tsx  NegotiationChat.tsx  PurchaseLinks.tsx  SearchBar.tsx  StoryProtocolPurchase.tsx  TierComparison.tsx  VerificationBadge.tsx  VerificationSection.tsx  WalletProvider.tsx  WalletProviderInner.tsx
marketplace/src/hooks/: index.ts  useVerification.ts
marketplace/src/lib/: utils.ts
marketplace/src/types/: index.ts
scripts/: add_license_headers.py  check-royalty-vault.js  check_royalty_vault.py  claim-as-ip-owner.js  claim-fixed.js  claim-royalties.js  claim-via-ip-account.js  claim-via-module.js  claim_and_unwrap.py  claim_royalties.py  compile_contracts.sh  config.js  debug-vault.js  debug_license_config.py  deploy_and_register.py  deploy_l3.py  enable_story_purchases.py  integration-test.sh  mint-license.js  mint_and_register_ip.py  package-lock.json  package.json  pay-royalty.js  register_custom_license.py  register_ip_asset.py  register_native_ip_terms.py  step2_register_ip.py  step2_with_approval.py  story_license_enablement.nlos  test_license_purchase.py  update_metadata.py  update_nft_uri.py  verify_license.py
sdks/: README.md
sdks/android/: build.gradle.kts
sdks/ios/: Package.swift
src/rra/: __init__.py  exceptions.py
src/rra/access/: __init__.py  stream_controller.py
src/rra/agents/: __init__.py  buyer.py  negotiator.py
src/rra/analytics/: __init__.py  clause_patterns.py  entropy_scorer.py  term_analysis.py
src/rra/api/: __init__.py  analytics.py  auth.py  deep_links.py  entropy.py  marketplace.py  rate_limiter.py  server.py  streaming.py  treasury.py  verification_api.py  warnings.py  webhooks.py  websocket.py  widget.py  yield_api.py
src/rra/auth/: __init__.py  delegation.py  did_auth.py  identity.py  webauthn.py
src/rra/bundling/: __init__.py  repo_bundle.py
src/rra/chains/: __init__.py  config.py
src/rra/cli/: __init__.py  main.py
src/rra/config/: __init__.py  environment.py  market_config.py
src/rra/contracts/: RepoLicense.sol  __init__.py  artifacts.py  license_nft.py  manager.py  story_protocol.py
tests/: __init__.py  conftest.py  mock_natlangchain_server.py  simulation_report.json  test_analytics.py  test_batch_queue.py  test_blockchain_integration.py  test_boundary_integration.py  test_clause_hardening.py  test_config.py  test_crypto.py  test_crypto_fuzzing.py  test_crypto_security_integration.py  test_crypto_v1_features.py  test_deep_links.py  test_did_integration.py  test_dispute_predictions.py  test_e2e_github_flow.py  test_environment_config.py  test_event_bridge.py  test_final_features.py  test_hardware_auth.py  test_jurisdiction_wrappers.py  test_l3_rollup.py  test_licensing.py  test_multi_party_reconciliation.py  test_natlangchain_integration.py  test_negotiation_pressure.py  test_negotiator.py  test_network_resilience.py  test_new_features.py  test_privacy.py  test_rate_limiter.py  test_reputation_weights.py  test_royalty_claiming.py  test_rwa_tokenization.py  test_secrets.py  test_security.py  test_storage.py  test_story_protocol.py  (+9 more)
(+132 files in other folders)
